# hyperion

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  run_hyperion.slurm  setup.py  spack.yaml
cmake/: DetectHIPorCUDA.cmake  FindHDF5.cmake  Toolchain-Frontier-HIP.cmake  Toolchain-NVIDIA-CUDA.cmake
cmake/site/: site_AC.cmake  site_default.cmake  site_frontier.cmake
doc/: getting_started.md  hyperion.txt  network.data  setup.txt  todo.txt
doc/devel/: build-system.txt  diag.txt  testing.txt
doc/interface/: flash.txt
hypy/: Makefile  hyperion.py  hyperion.pyx
scripts/: cmds.gdb  cmds2.gdb  hyperion_parallel_150-4036791.out  run_debug_hyp.sh  run_hyperion.sh
scripts/SLURM_BIN/: 150_pop_debug.out  16_result_with_energyBUG.out  16_working.out  4222141_general_gpu_error.out  4247255_initialGDB.out  flux_error_150.out  hyperion_parallel_150-3907835.out  hyperion_parallel_150-3907908.out  hyperion_parallel_150-3908462.out  hyperion_parallel_150-3908832.out  hyperion_serial150-3888806.out  hyperion_serial150-3888854.out  nan_150_error.out
src/: CMakeLists.txt  main.c  main_gpu.c
src/core/: CMakeLists.txt  bn_burner.c  bn_burner.h  bn_burner_SIMD.c  bn_burner_pec.c  bn_burner_printinfo.c  diagnostic.h  init.c  init.h  kill.c  kill.h  paths.c  paths.h  read_values.c  read_values.h  store.c  store.h
src/cpu/: CMakeLists.txt  burner_cpu.c
src/debug/: tickertape.c  tickertape.h
src/gpu/: CMakeLists.txt  bn_burner_gpu.c  bn_burner_gpu.h  bn_burner_gpu.hip  gpu_backend.c  hip_wrapper.cpp
src/hipcore/: CMakeLists.txt  bn_burner_gpu.c  bn_burner_gpu.h  bn_burner_gpu.hip  hip.c  hip.h  hip_backend.c  hip_backend.h  hip_debug_kernel.h  hip_debug_kernel.hip
src/parse-data/: parser.c  parser.h
tests/: .gitignore  CMakeLists.txt  Makefile  test.py  testmod_physical.py
tests/HELLO_GPU/: hello_gpu  hello_gpu.cpp  hello_gpu.err  hello_gpu.out  hello_gpu.sbatch
tools/: hypy.py
